--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,7 +121,8 @@
   <div class="content1a">
     <div id="map"></div>
     <div class="box400">
-      <img src=<%= sample1 %> width="500px" height="400px" alt="図1">
+      <img src='./public/sample1.png' width="500px" height="400px" alt="図1">
+      <%= sample1 %>
     </div>
      
   </div>
