--- a/views/index.ejs
+++ b/views/index.ejs
@@ -122,7 +122,7 @@
     <div id="map"></div>
     <div class="box400">
       <img src='./public/sample1.png' width="500px" height="400px" alt="図1">
-      <%= sample1 %>
+      <%= content %>
     </div>
      
   </div>
