--- a/views/index.ejs
+++ b/views/index.ejs
@@ -121,7 +121,7 @@
   <div class="content1a">
     <div id="map"></div>
     <div class="box400">
-      <img src='./public/sample1.png' width="500px" height="400px" alt="図1">
+      <img src='sample1.png' width="500px" height="400px" alt="図1">
       <%= content %>
     </div>
      
@@ -137,7 +137,7 @@
   </div>
   <iframe src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d25900.954866293792!2d139.76343727708726!3d35.76015945609524!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x60188e37e8a9c3b7%3A0xf4d1011b7397cdda!2z6aeQ6LuK5aC0!3m2!1d35.7570214!2d139.8045556!4m5!1s0x60189389354c0d79%3A0x78e0849cfb258a29!2z5YWs6KGG44OI44Kk44OsKOi7iuakheWtkOWvvuW_nCk!3m2!1d35.764956999999995!2d139.7573382!5e0!3m2!1sja!2sjp!4v1668170471021!5m2!1sja!2sjp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     
-    <img src="./public/sample2.png" width="400px" height="300px" alt="図2">
+    <img src="sample2.png" width="400px" height="300px" alt="図2">
 </div>
 </div>
 <div class="content1a">
